<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Activity">

    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_view" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/background_view"
        android:layout_margin="24dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-80dp"
        android:layout_marginBottom="-80dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_lc"
                android:gravity="center"
                android:id="@+id/c"
                android:onClick="cricket"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/blue_lc"
                android:id="@+id/f"
                android:onClick="football"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/blue_lc"
                android:id="@+id/v"
                android:onClick="vollyball"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c3"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/blue_lc"
                android:id="@+id/b"
                android:onClick="badminton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c4"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/blue_lc"
                android:id="@+id/l"
                android:onClick="longtenis"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/blue_lc"
                android:id="@+id/t"
                android:onClick="tableTenis"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c6"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>